- Fixed bug #48854 (array_merge_recursive modifies arrays after first one)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@283729 c90b9560-bf6c-de11-be94-00142212c4b1